roberthodgen.logger module name

--- a/example/example.html
+++ b/example/example.html
@@ -28,8 +28,8 @@
     <!-- Example AngularJS Application -->
     <script src="app.js"></script>
 
-    <!-- angular-logger -->
-    <script src="../src/angular-logger.js"></script>
+    <!-- roberthodgen-logger -->
+    <script src="../logger.js"></script>
 
   </body>
 </html>
